Updated Leaderboard with pagination, error fixing
Updated the leaderboard to allow pagination to show all users.
Fixed minor issues i.e course filtering